# computer-graphics-assignment

./: .gitignore  README.md  code_to_string.py  input.txt  output.txt  使用说明.md
src/: CMakeLists.txt  box.cpp  box.h  camera.cpp  camera.h  camera_patroller.cpp  camera_patroller.h  finger_animator.cpp  finger_animator.h  hand_animator.cpp  hand_animator.h  light_source.h  main.cpp  movable_object.cpp  movable_object.h  normal_map_shader.h  particle.cpp  particle.h  particle_generator.cpp  particle_generator.h  phong_shader.h
