add_executable(Hand
        gl_env.h
        main.cpp
        skeletal_mesh.h
        texture_image.h
        finger_animator.cpp
        finger_animator.h
        hand_animator.cpp
        hand_animator.h
        camera.cpp
        camera.h
        camera_patroller.cpp
        camera_patroller.h
        movable_object.h
        movable_object.cpp
        light_source.h
        light_source.cpp
        phong_shader.h
        particle.h
        particle.cpp
        particle_generator.h
        particle_generator.cpp
        particle_shader.h)

target_link_libraries(Hand PRIVATE assimp::assimp glew_s glm stb glfw)
target_include_directories(Hand PRIVATE
        ../third_party/glew/include
        ${CMAKE_CURRENT_BINARY_DIR})

target_compile_features(Hand PRIVATE cxx_std_11)

configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)